--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@
 .py_venv/
 .idea/
 __pycache__/
-log_basic.txt
-progressbar.py
-entity.txt
-generator.txt
+configuration/
 program-exe/
 program-txt/
